@@ -10,6 +10,7 @@ Revision history for HTTP-Message
     - Add support for RFC 8187 encoded filenames (GH#115) (Zaki Mughal)
     - Fix memoized _uri_canonical #121 (GH#123) (Dorian Taylor)
     - Don't overwrite $@ in decodable (gh #80) (GH#118) (mschae94)
+    - Add support for RFC 8187 encoded filenames (GH#115) (Zaki Mughal)
 
 6.18      2018-06-05 16:29:15Z
     - Revert status_message to original code (GH#111) (Theo van Hoesel)
